Bug 73155, make RuntimeViewsheet.getViewsheetSandbox() optional to enforce null handling in callers.